<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>distance_warning</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="daonguyenhp2311@todo.todo">daonguyenhp2311</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- START UPDATE -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- Mathematical processing for coordinate transformations -->
  <depend>tf2</depend>
  <!-- Provide tools to enable TF2 to communicate with ROS -->
  <depend>tf2_ros</depend>
  <!-- Contains standard geometric data structures of ROS -->
  <depend>tf2_geometry_msgs</depend>
  <depend>geometry_msgs</depend>
  <!-- END UPDATE -->

  <depend>rclcpp</depend>  
  <depend>std_msgs</depend>
  <depend>rclcpp_action</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
